--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -1,4 +1,7 @@
 \usepackage[french]{babel}
+
+% TODO: ajouter slides du cours et rapports Loic
+
 @book{mouat_2005,
 title={Using Docker},
 publisher={O'Reilly Media},
