--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -27,7 +27,72 @@ month={avril}
 }
 
 @misc{arch_linux_arm,
-title={ODROID-XU3},
-url={https://archlinuxarm.org/platforms/armv7/samsung/odroid-xu3}, 
-journal={Arch Linux ARM}} 
+title={{ODROID-XU3} | {Arch Linux ARM}},
+note={\url{https://archlinuxarm.org/platforms/armv7/samsung/odroid-xu3}},
+year={2016},
+month={avril}
+}
+
+@misc{understanding_image_container_driver_storage,
+title={{Understand images, containers, and storage drivers}},    
+author={Docker Inc.},
+note={\url{https://docs.docker.com/engine/userguide/storagedriver/imagesandcontainers/}},
+year={2016},
+month={mai}
+}
+
+@misc{what_is_docker,
+title={{What is Docker ?}},    
+author={Docker Inc.},
+note={\url{https://www.docker.com/what-docker}},
+year={2016},
+month={mai}
+}
+
+@misc{shipping_container_linux_code,
+title={{Docker: A 'Shipping Container' for Linux Code}},    
+author={Katherine Noyes},
+note={\url{https://www.linux.com/news/docker-shipping-container-linux-code}},
+year={2016},
+month={mai}
+}
+
+@misc{docker_1_10_user_namespace,
+title={{Docker 1.10 et les user namespace}},    
+note={\url{http://linuxfr.org/users/w3blogfr/journaux/docker-1-10-et-les-user-namespace}},
+year={2016},
+month={mai}
+}
+
+@misc{toptal_separation_axiety_linux_namespaces,
+title={{Separation Anxiety: A Tutorial for Isolating Your System with Linux Namespaces}},    
+note={\url{https://www.toptal.com/linux/separation-anxiety-isolating-your-system-with-linux-namespaces}},
+year={2016},
+month={mai}
+}
+
+@misc{crosbymichael_creating_contrainers_part_1,
+title={{Creating containers - Part 1}},    
+note={\url{http://crosbymichael.com/creating-containers-part-1.html}},
+year={2016},
+month={mai}
+}
+
+@misc{yadutaf_docker_user_namespace,
+title={{Docker for your users - Introducing user namespace}},
+author={{Jean-Tiare Le Bigot}},
+note={\url{https://blog.yadutaf.fr/2016/04/14/docker-for-your-users-introducing-user-namespace/}},
+year={2016},
+month={mai}
+}
+
+@misc{jaroslav_docker_1_10,
+title={{Docker 1.10}},
+author={{Jaroslav}},
+note={\url{http://www.jrslv.com/docker-1-10/}},
+year={2016},
+month={mai}
+}
+
+
 
