--- a/rapports/report/report_docker_marigliano.tex
+++ b/rapports/report/report_docker_marigliano.tex
@@ -304,7 +304,7 @@ Dans ce chapitre, on présente diverses bonnes pratiques et configurations dans 
 Parmi ces techniques, on peut citer :
 
 \begin{itemize}
-\item TODOchaptertitle
+\item TODO
 \item TODO
 \end{itemize}
 
